질문 조회 케이스별 분기, 코드 정리
